--- a/src/app/contact-us/contact-us.html
+++ b/src/app/contact-us/contact-us.html
@@ -1,1 +1,83 @@
-<p>contact-us works!</p>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+<section class="contact-wrapper">
+
+  <!-- HERO -->
+  <div class="hero">
+    <h1>Contact <span>Automotives Motors</span></h1>
+    <p>
+      Premium cars. Elite service. World-class experience.
+    </p>
+    <div class="luxury-line"></div>
+  </div>
+
+  <div class="contact-container">
+<div class="badge" ></div>
+   <!-- LEFT : INFO -->
+    <div class="contact-info">
+
+      <h2>Get In Touch</h2>
+      <div class="luxury-line"></div>
+
+      <p class="text-info" style="color: white ;">
+        Looking to buy, rent, or inquire about our luxury car collection?
+        Our concierge team is available 24/7 to assist you.
+      </p>
+
+      <div class="info-item">
+        <span>📍</span>
+        <div>Ahmedabad, Gujarat, India</div>
+      </div>
+
+      <div class="info-item">
+        <span>📞</span>
+        <div>+91 98765 43210</div>
+      </div>
+
+      <div class="info-item">
+        <span>✉️</span>
+        <div>Automotives@luxurymotors.com</div>
+      </div>
+
+      <!-- MAP -->
+      <div class="map-box">
+        <iframe
+          src="https://www.google.com/maps?q=Ahmedabad%2C%20Gujarat%2C%20India&output=embed"
+          loading="lazy">
+        </iframe>
+      </div>
+
+    </div>
+
+    <!-- RIGHT : FORM -->
+    <div class="contact-form">
+      <h2>Send Message</h2>
+      <div class="luxury-line"></div>
+
+      <form >
+
+        <div class="input-group">
+          <input type="text" placeholder="First Name" required>
+          <input type="text" placeholder="Last Name" required>
+        </div>
+
+        <input type="email" placeholder="Email Address" required>
+        <input type="text" placeholder="Subject">
+
+        <textarea placeholder="Your Message"></textarea>
+
+        <button type="submit" onclick="submitForm()">
+          Send Message
+        </button>
+
+        <p class="footer-note">
+          Our team will respond within 24 hours.
+        </p>
+
+      </form>
+    </div>
+   
+
+  </div>
+
+</section>
