--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -17,7 +17,7 @@
             
             <li> <a id="a-tag" routerLink="Contact-Us">Contact Us</a> </li>
     
-            <li> <a id="a-tag" routerLink="login">login</a> </li>
+            <li> <a id="a-tag" routerLink="Login">login</a> </li>
             
         </ul>
 
