add the authguard in the website

--- a/src/app/collection/collection.html
+++ b/src/app/collection/collection.html
@@ -34,7 +34,7 @@
   </button>
 </div>
 
-<div id="carCollection" class="collection">
+<!-- <div id="carCollection" class="collection">
   <div class="car-card" *ngFor="let car of filteredCars">
     <img [src]="car.image" [alt]="car.name">
 
@@ -53,5 +53,32 @@
       <button class="btn-book">Book</button>
     </div>
   </div>
+</div> -->
+<div class="collection">
+  <div class="car-card" *ngFor="let car of filteredCars">
+
+    <img 
+      [src]="car.image"
+      [alt]="car.name"
+      (click)="openDetails(car)"
+    />
+
+    <h3>{{ car.name }}</h3>
+    <p class="category">{{ car.category | uppercase }}</p>
+
+    <div class="specs">
+      <span>⚡ {{ car.power }}</span>
+      <span>🏁 {{ car.speed }}</span>
+    </div>
+
+    <div class="price">{{ car.price }}</div>
+
+    <div class="actions">
+      <button class="btn-view" (click)="openDetails(car)">View</button>
+      <button class="btn-book">Book</button>
+    </div>
+
+  </div>
 </div>
+
 </div>
