--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -8,10 +8,26 @@
 
 .main-container {
     display: flex;
-    height: 104vh;
-    width: 100vw;
+    height: 90vh;   
+    width: 99vw;
 }
 
+.error {
+  color: #ff4d4d;
+  font-size: 12px;
+  margin-top: 6px;
+}
+ 
+.auth-error {
+  margin-top: 15px;
+  padding: 10px;
+  background: rgba(255, 77, 77, 0.1);
+  border: 1px solid rgba(255, 77, 77, 0.4);
+  color: #ff4d4d;
+  font-size: 13px;
+  border-radius: 8px;
+  text-align: center;
+}
 
 .car{
 width: 35px;
@@ -29,6 +45,7 @@ height: 35px;
     background: #000;
     min-width: 450px;
     z-index: 10;
+    height: 80vh;
 }
 
 /* Close Button (X) - Top Left */
@@ -56,7 +73,7 @@ height: 35px;
 /* Brand Branding (Logo + Title) */
 .brand-info {
     text-align: center;
-    margin-bottom: 30px;
+    margin-top: -30px;
 }
 
 .logo-box {
@@ -303,6 +320,7 @@ height: 35px;
     flex-direction: column;
     justify-content: flex-end;
     padding: 80px;
+    height: 69vh;
 }
 
 .overlay {
@@ -350,6 +368,7 @@ height: 35px;
 .gradient-text {
     background: linear-gradient(90deg, #0082ff, #00d4ff);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
