--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -8,7 +8,7 @@
 
 .main-container {
     display: flex;
-    height: 90vh;   
+    height: 100vh;   
     width: 99vw;
 }
 
@@ -45,7 +45,7 @@ height: 35px;
     background: #000;
     min-width: 450px;
     z-index: 10;
-    height: 80vh;
+    height: 100vh;
 }
 
 /* Close Button (X) - Top Left */
@@ -73,7 +73,7 @@ height: 35px;
 /* Brand Branding (Logo + Title) */
 .brand-info {
     text-align: center;
-    margin-top: -30px;
+    margin-top:50PX;
 }
 
 .logo-box {
@@ -320,7 +320,7 @@ height: 35px;
     flex-direction: column;
     justify-content: flex-end;
     padding: 80px;
-    height: 69vh;
+    height: 89vh;
 }
 
 .overlay {
