--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -104,9 +104,7 @@
       </div>
     </div>
   </div>
-</div> 
-
- -->
+</div> -->
 
 
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
