--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -1,32 +1,32 @@
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <nav class="heder">
     <div class="logo">
-            <i class="fas fa-car"></i> Automotive
-        </div>
-    
-        <ul class="ul-tag">
-            
-            <li> <a id="a-tag" routerLink="Home">Home</a> </li>
-            
-            <li> <a id="a-tag" routerLink="Collection">Collection</a> </li>
-            
-            <li> <a id="a-tag" routerLink="Sell-Car">Sell Car</a> </li>
-            
-            <li> <a id="a-tag" routerLink="About-Us">About Us</a> </li>
-            
-            <li> <a id="a-tag" routerLink="Contact-Us">Contact Us</a> </li>
-    
-            <li> <a id="a-tag" routerLink="Login">login</a> </li>
-            
-        </ul>
+        <i class="fas fa-car"></i> Automotive
+    </div>
 
-            <!-- <div class="search-cart">
-      <div class="header-search">
-        <input class="s-input "type="search" placeholder="Search..." 🔍 />
-        <button class="s-btn">🔍</button>
-      </div>
-      </div> -->
+    <ul class="ul-tag">
 
-      
+        <li> <a id="a-tag" routerLink="Home">Home</a> </li>
+
+        <li> <a id="a-tag" routerLink="Collection">Collection</a> </li>
+
+        <li> <a id="a-tag" routerLink="Sell-Car">Sell Car</a> </li>
+
+        <li> <a id="a-tag" routerLink="About-Us">About Us</a> </li>
+
+        <li> <a id="a-tag" routerLink="Contact-Us">Contact Us</a> </li>
+
+        <!-- <li> <a id="a-tag" routerLink="Login">login</a> </li> -->
+        @if (!isLoggedIn()) {
+        <li><a id="a-tag" routerLink="Login">Login</a></li>
+        }
+
+        @if (isLoggedIn()) {
+        <li><a id="a-tag" (click)="logout()" style="cursor:pointer">Logout</a></li>
+        }
+    </ul>
+
 </nav>
