create the booking page ans the json server and all data get to api

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -4,7 +4,7 @@
         <h1>Your Car Repairs</h1>
         <p>Visit us for your service</p>
     </div>
-    <a class="book-btn" href="Appointment.php">Book Appointment</a>
+    <a class="book-btn" href="book-appointment">Book Appointment</a>
     </div>
 </header>
 
