--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -10,16 +10,11 @@
     <ul class="ul-tag">
 
         <li> <a id="a-tag" routerLink="Home">Home</a> </li>
-
-        <li> <a id="a-tag" routerLink="Collection">Collection</a> </li>
-
-        <li> <a id="a-tag" routerLink="Sell-Car">Sell Car</a> </li>
-
-        <li> <a id="a-tag" routerLink="About-Us">About Us</a> </li>
-
-        <li> <a id="a-tag" routerLink="Contact-Us">Contact Us</a> </li>
-
-        <!-- <li> <a id="a-tag" routerLink="Login">login</a> </li> -->
+        <li> <a id="a-tag" [routerLink]="['/collection']">Collection</a> </li>
+        <li> <a id="a-tag" [routerLink]="['/sell-car']">Sell Car</a> </li>
+        <li> <a id="a-tag" [routerLink]="['/about-us']">About Us</a> </li>
+        <li> <a id="a-tag" [routerLink]="['/contact-us']">Contact Us</a> </li>
+        
         @if (!isLoggedIn()) {
         <li><a id="a-tag" routerLink="Login">Login</a></li>
         }
