--- a/src/app/car-details/car-details.html
+++ b/src/app/car-details/car-details.html
@@ -43,7 +43,7 @@
           <span class="value">{{ details.fuel }}</span>
         </div>
         <div class="spec-card">
-          <span class="label">Mileage</span>
+          <span class="label">km</span>
           <span class="value">{{ details.mileage }}</span>
         </div>
         <div class="spec-card">
@@ -70,6 +70,10 @@
           <span class="label">Warranty</span>
           <span class="value">{{ details.warranty }}</span>
         </div>
+          <!-- <div class="spec-card">
+          <span class="label">Owner</span>
+          <span class="value">{{ details.owners }}</span>
+        </div> -->
       </div>
     </div>
 
